@@ -40,6 +40,8 @@ Import-Package: com.openexchange.exception,
  javax.mail.internet,
  javax.mail.internet.idn,
  javax.management,
+ javax.servlet,
+ javax.servlet.http,
  org.apache.commons.codec,
  org.apache.commons.codec.net,
  org.apache.commons.logging,
